--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "euller",
+  "name": "girls",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,7 +8,7 @@
     "start": "node src/server.js",
     "start:dev": "nodemon src/server.js"
   },
-  "author": "Euller Ferreira",
+  "author": "Girls",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.7",
