--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.3",
-    "nodemon": "^3.1.2",
-    "mysql2-promise":"^0.1.4"
+    "mysql2-promise": "^0.1.4",
+    "nodemon": "^3.1.2"
   }
 }
